new drafted sptw post

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:          Weiwei Hsu
-description:    "Minimal Jekyll theme for storytellers"
+description:    "be courageous"
 url:            "https://weiweihsu.github.io"
 
 
