--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,32 @@
 # Site settings
-title:          Weiwei Hsu
-description:    "be courageous"
-url:            "https://weiweihsu.github.io"
-
+title: Weiwei Xu
+description: "be courageous"
+url: "https://weiweihsu.github.io"
 
 # Author
 author:
-  name:         Weiwei
-  url:          https://weiweihsu.com
-  email:        wei@weiweihsu.com
-  drink:        water
+  name: Weiwei Xu
+  url: https://weiweihsu.com
+  email: wei@weiweihsu.com
+  drink: water
 
 # Build settings
-markdown:       kramdown
+markdown: kramdown
 
 # Assets
 sass:
-  sass_dir:     _sass
-  style:        compressed
+  sass_dir: _sass
+  style: compressed
 
 # Gems
 plugins:
- - jekyll-feed
- - jekyll-paginate
-  # - jemoji #Uncomment this to allow emoji in your post
+  - jekyll-feed
+  - jekyll-paginate
+    # - jemoji #Uncomment this to allow emoji in your post
 
 # Permalinks
-permalink:      /:year-:month-:day/:title
-paginate:       5
+permalink: /:year-:month-:day/:title
+paginate: 5
 paginate_path: "pages/weeknotes/page:num/"
 
 # Collections
