updated email address

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Weiwei Xu
 description: "be courageous"
-url: "https://weiweihsu.github.io"
+url: "https://weiweiwei33.github.io"
 
 # Author
 author:
   name: Weiwei Xu
-  url: https://weiweihsu.com
-  email: wei@weiweihsu.com
+  url: https://weiwei.place
+  email: wei@weiwei.place
   drink: water
 
 # Build settings
